--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -29,7 +29,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-11-15 18:51:55
+// updated on 2017-11-22 22:25:26
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -387,7 +387,6 @@ DOMAIN-SUFFIX,alipaylog.com,REJECT
 DOMAIN-SUFFIX,amdc.alipay.com,REJECT
 DOMAIN-SUFFIX,api.wapa.taobao.com,REJECT
 DOMAIN-SUFFIX,api.waptest.taobao.com,REJECT
-DOMAIN-SUFFIX,apoll.m.taobao.com,REJECT
 DOMAIN-SUFFIX,appdownload.alicdn.com,REJECT
 DOMAIN-SUFFIX,atanx.alicdn.com,REJECT
 DOMAIN-SUFFIX,atanx2.alicdn.com,REJECT
@@ -425,8 +424,6 @@ DOMAIN-SUFFIX,m.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,match.p4p.1688.com,REJECT
 DOMAIN-SUFFIX,material.istreamsche.com,REJECT
 DOMAIN-SUFFIX,mlt01.com,REJECT
-DOMAIN-SUFFIX,nbsdk-baichuan.alicdn.com,REJECT
-DOMAIN-SUFFIX,nbsdk-baichuan.taobao.com,REJECT
 DOMAIN-SUFFIX,osfota.cdn.aliyun.com,REJECT
 DOMAIN-SUFFIX,osupdate.aliyun.com,REJECT
 DOMAIN-SUFFIX,osupdateservice.yunos.com,REJECT
@@ -2750,6 +2747,7 @@ DOMAIN-SUFFIX,mobisage.cn,REJECT
 DOMAIN-SUFFIX,mobvista.com,REJECT
 DOMAIN-SUFFIX,money.qz828.com,REJECT
 DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
+DOMAIN-SUFFIX,momo.popupad.cn,REJECT
 DOMAIN-SUFFIX,moodoocrv.com.cn,REJECT
 DOMAIN-SUFFIX,mookie1.com,REJECT
 DOMAIN-SUFFIX,moonwish.com.cn,REJECT
@@ -3003,6 +3001,7 @@ DOMAIN-SUFFIX,qshxc.com,REJECT
 DOMAIN-SUFFIX,qt.biqugezw.com,REJECT
 DOMAIN-SUFFIX,qtmojo.cn,REJECT
 DOMAIN-SUFFIX,qtmojo.com,REJECT
+DOMAIN-SUFFIX,quanliyouxi.cn,REJECT
 DOMAIN-SUFFIX,quansj.cn,REJECT
 DOMAIN-SUFFIX,quantcount.com,REJECT
 DOMAIN-SUFFIX,quantserve.com,REJECT
@@ -3715,7 +3714,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-11-15 18:52:05
+// updated on 2017-11-22 22:25:33
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -3799,6 +3798,7 @@ DOMAIN-SUFFIX,0123401234.com,ChinaProxy
 DOMAIN-SUFFIX,012logo.com,ChinaProxy
 DOMAIN-SUFFIX,013hg.com,ChinaProxy
 DOMAIN-SUFFIX,014.cc,ChinaProxy
+DOMAIN-SUFFIX,014bjldc.com,ChinaProxy
 DOMAIN-SUFFIX,0168.cc,ChinaProxy
 DOMAIN-SUFFIX,0173.com,ChinaProxy
 DOMAIN-SUFFIX,01bz.wang,ChinaProxy
@@ -4007,6 +4007,7 @@ DOMAIN-SUFFIX,0513.cc,ChinaProxy
 DOMAIN-SUFFIX,0513.net,ChinaProxy
 DOMAIN-SUFFIX,0513.org,ChinaProxy
 DOMAIN-SUFFIX,0513011.com,ChinaProxy
+DOMAIN-SUFFIX,051352.com,ChinaProxy
 DOMAIN-SUFFIX,0514.com,ChinaProxy
 DOMAIN-SUFFIX,0514rj.com,ChinaProxy
 DOMAIN-SUFFIX,051591.com,ChinaProxy
@@ -6013,6 +6014,7 @@ DOMAIN-SUFFIX,35gbw.com,ChinaProxy
 DOMAIN-SUFFIX,35go.net,ChinaProxy
 DOMAIN-SUFFIX,35inter.com,ChinaProxy
 DOMAIN-SUFFIX,35inter.net,ChinaProxy
+DOMAIN-SUFFIX,35kds.com,ChinaProxy
 DOMAIN-SUFFIX,35kk.cc,ChinaProxy
 DOMAIN-SUFFIX,35nic.com,ChinaProxy
 DOMAIN-SUFFIX,35pic.com,ChinaProxy
@@ -6896,6 +6898,7 @@ DOMAIN-SUFFIX,51ey.com,ChinaProxy
 DOMAIN-SUFFIX,51eyun.com,ChinaProxy
 DOMAIN-SUFFIX,51f.com,ChinaProxy
 DOMAIN-SUFFIX,51facai.com,ChinaProxy
+DOMAIN-SUFFIX,51fankui.com,ChinaProxy
 DOMAIN-SUFFIX,51fanli.com,ChinaProxy
 DOMAIN-SUFFIX,51fanli.net,ChinaProxy
 DOMAIN-SUFFIX,51fdc.com,ChinaProxy
@@ -8345,8 +8348,10 @@ DOMAIN-SUFFIX,7757.cc,ChinaProxy
 DOMAIN-SUFFIX,7759.com,ChinaProxy
 DOMAIN-SUFFIX,7766.info,ChinaProxy
 DOMAIN-SUFFIX,7766.org,ChinaProxy
+DOMAIN-SUFFIX,77719767.com,ChinaProxy
 DOMAIN-SUFFIX,77745.com,ChinaProxy
 DOMAIN-SUFFIX,77758511.com,ChinaProxy
+DOMAIN-SUFFIX,77773657.com,ChinaProxy
 DOMAIN-SUFFIX,777edu.com,ChinaProxy
 DOMAIN-SUFFIX,777moban.com,ChinaProxy
 DOMAIN-SUFFIX,777wyx.com,ChinaProxy
@@ -11465,6 +11470,7 @@ DOMAIN-SUFFIX,bbsblog.net,ChinaProxy
 DOMAIN-SUFFIX,bbsheji.com,ChinaProxy
 DOMAIN-SUFFIX,bbsls.net,ChinaProxy
 DOMAIN-SUFFIX,bbsmax.com,ChinaProxy
+DOMAIN-SUFFIX,bbspro.net,ChinaProxy
 DOMAIN-SUFFIX,bbstoday.com,ChinaProxy
 DOMAIN-SUFFIX,bbstoday.net,ChinaProxy
 DOMAIN-SUFFIX,bbstripe.me,ChinaProxy
@@ -13320,6 +13326,7 @@ DOMAIN-SUFFIX,cgxm.net,ChinaProxy
 DOMAIN-SUFFIX,cgylke.com,ChinaProxy
 DOMAIN-SUFFIX,cgylw.com,ChinaProxy
 DOMAIN-SUFFIX,cgyou.com,ChinaProxy
+DOMAIN-SUFFIX,cgyouxi.com,ChinaProxy
 DOMAIN-SUFFIX,cgzz8.com,ChinaProxy
 DOMAIN-SUFFIX,fans.com,ChinaProxy
 DOMAIN-SUFFIX,water.com,ChinaProxy
@@ -13899,6 +13906,7 @@ DOMAIN-SUFFIX,chinahrd.net,ChinaProxy
 DOMAIN-SUFFIX,chinahrt.com,ChinaProxy
 DOMAIN-SUFFIX,chinahtml.com,ChinaProxy
 DOMAIN-SUFFIX,chinahtz.com,ChinaProxy
+DOMAIN-SUFFIX,chinahuanglian.com,ChinaProxy
 DOMAIN-SUFFIX,chinahuben.com,ChinaProxy
 DOMAIN-SUFFIX,chinahvacr.com,ChinaProxy
 DOMAIN-SUFFIX,chinaidns.com,ChinaProxy
@@ -14304,6 +14312,7 @@ DOMAIN-SUFFIX,chuxiangyi.com,ChinaProxy
 DOMAIN-SUFFIX,chuxinfood.com,ChinaProxy
 DOMAIN-SUFFIX,chuyixuexi.com,ChinaProxy
 DOMAIN-SUFFIX,chuyouke.com,ChinaProxy
+DOMAIN-SUFFIX,chuyu.me,ChinaProxy
 DOMAIN-SUFFIX,chvoice.com,ChinaProxy
 DOMAIN-SUFFIX,chvv.com,ChinaProxy
 DOMAIN-SUFFIX,chwlcn.net,ChinaProxy
@@ -18613,6 +18622,7 @@ DOMAIN-SUFFIX,fd597.com,ChinaProxy
 DOMAIN-SUFFIX,fd7c.com,ChinaProxy
 DOMAIN-SUFFIX,fdc0760.com,ChinaProxy
 DOMAIN-SUFFIX,fdcdaohang.com,ChinaProxy
+DOMAIN-SUFFIX,fdedai.com,ChinaProxy
 DOMAIN-SUFFIX,fdgzw.com,ChinaProxy
 DOMAIN-SUFFIX,fdjyw.com,ChinaProxy
 DOMAIN-SUFFIX,fdjzu.com,ChinaProxy
@@ -18756,6 +18766,7 @@ DOMAIN-SUFFIX,fengxiaotx.com,ChinaProxy
 DOMAIN-SUFFIX,fengxuan.co,ChinaProxy
 DOMAIN-SUFFIX,fengyelace.com,ChinaProxy
 DOMAIN-SUFFIX,fengyiyi.com,ChinaProxy
+DOMAIN-SUFFIX,fengyunlive.com,ChinaProxy
 DOMAIN-SUFFIX,fengyunzhibo.com,ChinaProxy
 DOMAIN-SUFFIX,fengyushan.com,ChinaProxy
 DOMAIN-SUFFIX,fengyx.com,ChinaProxy
@@ -20644,6 +20655,7 @@ DOMAIN-SUFFIX,h2os.com,ChinaProxy
 DOMAIN-SUFFIX,h4.cc,ChinaProxy
 DOMAIN-SUFFIX,legend.com,ChinaProxy
 DOMAIN-SUFFIX,share.com,ChinaProxy
+DOMAIN-SUFFIX,h5120.com,ChinaProxy
 DOMAIN-SUFFIX,h515.net,ChinaProxy
 DOMAIN-SUFFIX,h5151.com,ChinaProxy
 DOMAIN-SUFFIX,h5abc.com,ChinaProxy
@@ -20652,6 +20664,7 @@ DOMAIN-SUFFIX,h5data.com,ChinaProxy
 DOMAIN-SUFFIX,h5dm.com,ChinaProxy
 DOMAIN-SUFFIX,h5gal.net,ChinaProxy
 DOMAIN-SUFFIX,h5jun.com,ChinaProxy
+DOMAIN-SUFFIX,h5king.com,ChinaProxy
 DOMAIN-SUFFIX,h5le.com,ChinaProxy
 DOMAIN-SUFFIX,h5mc.com,ChinaProxy
 DOMAIN-SUFFIX,h5ps.com,ChinaProxy
@@ -20742,6 +20755,7 @@ DOMAIN-SUFFIX,hailin1018.com,ChinaProxy
 DOMAIN-SUFFIX,haima.me,ChinaProxy
 DOMAIN-SUFFIX,haima001.com,ChinaProxy
 DOMAIN-SUFFIX,haimawan.com,ChinaProxy
+DOMAIN-SUFFIX,haimayisheng.com,ChinaProxy
 DOMAIN-SUFFIX,haimazhuang.com,ChinaProxy
 DOMAIN-SUFFIX,haimi.com,ChinaProxy
 DOMAIN-SUFFIX,hainachuan.org,ChinaProxy
@@ -24548,6 +24562,7 @@ DOMAIN-SUFFIX,jjjg.co,ChinaProxy
 DOMAIN-SUFFIX,jjjoystudios.com,ChinaProxy
 DOMAIN-SUFFIX,jjjtimes.com,ChinaProxy
 DOMAIN-SUFFIX,jjkeq.com,ChinaProxy
+DOMAIN-SUFFIX,jjklife.com,ChinaProxy
 DOMAIN-SUFFIX,jjlwd.com,ChinaProxy
 DOMAIN-SUFFIX,jjmc2015.com,ChinaProxy
 DOMAIN-SUFFIX,jjmmw.com,ChinaProxy
@@ -26698,6 +26713,7 @@ DOMAIN-SUFFIX,licaimofang.com,ChinaProxy
 DOMAIN-SUFFIX,licairen.net,ChinaProxy
 DOMAIN-SUFFIX,licensepad.com,ChinaProxy
 DOMAIN-SUFFIX,licess.org,ChinaProxy
+DOMAIN-SUFFIX,lichenfan.com,ChinaProxy
 DOMAIN-SUFFIX,lichengdai.com,ChinaProxy
 DOMAIN-SUFFIX,licomsh.com,ChinaProxy
 DOMAIN-SUFFIX,licqi.com,ChinaProxy
@@ -27344,6 +27360,7 @@ DOMAIN-SUFFIX,lswlsw.com,ChinaProxy
 DOMAIN-SUFFIX,lsxs688.com,ChinaProxy
 DOMAIN-SUFFIX,lsxz.org,ChinaProxy
 DOMAIN-SUFFIX,lszj.com,ChinaProxy
+DOMAIN-SUFFIX,lt.tn,ChinaProxy
 DOMAIN-SUFFIX,lt600.com,ChinaProxy
 DOMAIN-SUFFIX,ltaaa.com,ChinaProxy
 DOMAIN-SUFFIX,ltaaa.net,ChinaProxy
@@ -27931,6 +27948,7 @@ DOMAIN-SUFFIX,mc689.com,ChinaProxy
 DOMAIN-SUFFIX,mcake.com,ChinaProxy
 DOMAIN-SUFFIX,mcarding.com,ChinaProxy
 DOMAIN-SUFFIX,mcbbq.cc,ChinaProxy
+DOMAIN-SUFFIX,mcbbs.co,ChinaProxy
 DOMAIN-SUFFIX,mcbbs.net,ChinaProxy
 DOMAIN-SUFFIX,mcbrother.com,ChinaProxy
 DOMAIN-SUFFIX,mcchina.com,ChinaProxy
@@ -27940,6 +27958,7 @@ DOMAIN-SUFFIX,mcdstudent.com,ChinaProxy
 DOMAIN-SUFFIX,mcdsusan.com,ChinaProxy
 DOMAIN-SUFFIX,mcdusiv.com,ChinaProxy
 DOMAIN-SUFFIX,mcdvisa.com,ChinaProxy
+DOMAIN-SUFFIX,mcelf.com,ChinaProxy
 DOMAIN-SUFFIX,mcfuzhu.net,ChinaProxy
 DOMAIN-SUFFIX,mcgcn.com,ChinaProxy
 DOMAIN-SUFFIX,mchifi.com,ChinaProxy
@@ -27961,6 +27980,7 @@ DOMAIN-SUFFIX,mcyacg.com,ChinaProxy
 DOMAIN-SUFFIX,mcyhfl.com,ChinaProxy
 DOMAIN-SUFFIX,mcyou.xyz,ChinaProxy
 DOMAIN-SUFFIX,mcysw.net,ChinaProxy
+DOMAIN-SUFFIX,mcyun.com,ChinaProxy
 DOMAIN-SUFFIX,mczyz.com,ChinaProxy
 DOMAIN-SUFFIX,md521.com,ChinaProxy
 DOMAIN-SUFFIX,mdaxue.com,ChinaProxy
@@ -28216,6 +28236,7 @@ DOMAIN-SUFFIX,mf910.com,ChinaProxy
 DOMAIN-SUFFIX,mfbuluo.com,ChinaProxy
 DOMAIN-SUFFIX,mfcad.com,ChinaProxy
 DOMAIN-SUFFIX,mfcteda.com,ChinaProxy
+DOMAIN-SUFFIX,mfhb88.com,ChinaProxy
 DOMAIN-SUFFIX,mfpad.com,ChinaProxy
 DOMAIN-SUFFIX,mfqqx.com,ChinaProxy
 DOMAIN-SUFFIX,mftp.info,ChinaProxy
@@ -30127,6 +30148,7 @@ DOMAIN-SUFFIX,orzice.com,ChinaProxy
 DOMAIN-SUFFIX,orzjoy.com,ChinaProxy
 DOMAIN-SUFFIX,os.com,ChinaProxy
 DOMAIN-SUFFIX,os1010.com,ChinaProxy
+DOMAIN-SUFFIX,os7blue.com,ChinaProxy
 DOMAIN-SUFFIX,osbean.com,ChinaProxy
 DOMAIN-SUFFIX,oscarzhoud.com,ChinaProxy
 DOMAIN-SUFFIX,oschina.net,ChinaProxy
@@ -31443,6 +31465,7 @@ DOMAIN-SUFFIX,qiniutek.com,ChinaProxy
 DOMAIN-SUFFIX,qiniuts.com,ChinaProxy
 DOMAIN-SUFFIX,qinjiebang.com,ChinaProxy
 DOMAIN-SUFFIX,qinjielan.com,ChinaProxy
+DOMAIN-SUFFIX,qinkan.net,ChinaProxy
 DOMAIN-SUFFIX,qinlake.com,ChinaProxy
 DOMAIN-SUFFIX,qinliancf.com,ChinaProxy
 DOMAIN-SUFFIX,qinlina.com,ChinaProxy
@@ -31966,6 +31989,7 @@ DOMAIN-SUFFIX,qxnzx.com,ChinaProxy
 DOMAIN-SUFFIX,qxrisk.com,ChinaProxy
 DOMAIN-SUFFIX,qxw.cc,ChinaProxy
 DOMAIN-SUFFIX,qxwidc.com,ChinaProxy
+DOMAIN-SUFFIX,qxwz.com,ChinaProxy
 DOMAIN-SUFFIX,qxzc.net,ChinaProxy
 DOMAIN-SUFFIX,qxzxp.com,ChinaProxy
 DOMAIN-SUFFIX,qy01.com,ChinaProxy
@@ -33164,6 +33188,7 @@ DOMAIN-SUFFIX,shenweimicro.com,ChinaProxy
 DOMAIN-SUFFIX,shenyangoffice.com,ChinaProxy
 DOMAIN-SUFFIX,shenyedm.net,ChinaProxy
 DOMAIN-SUFFIX,shenyongxiang.com,ChinaProxy
+DOMAIN-SUFFIX,shenyou.tv,ChinaProxy
 DOMAIN-SUFFIX,shenzhenair.com,ChinaProxy
 DOMAIN-SUFFIX,shenzhenshui.com,ChinaProxy
 DOMAIN-SUFFIX,shenzhenu.com,ChinaProxy
@@ -33357,6 +33382,7 @@ DOMAIN-SUFFIX,shou99.net,ChinaProxy
 DOMAIN-SUFFIX,shoubanjiang.com,ChinaProxy
 DOMAIN-SUFFIX,shoubus.com,ChinaProxy
 DOMAIN-SUFFIX,shoucw.com,ChinaProxy
+DOMAIN-SUFFIX,shoudian.com,ChinaProxy
 DOMAIN-SUFFIX,shoudian.org,ChinaProxy
 DOMAIN-SUFFIX,shoudujuchang.com,ChinaProxy
 DOMAIN-SUFFIX,shoudurc.com,ChinaProxy
@@ -33672,6 +33698,7 @@ DOMAIN-SUFFIX,sinanet.com,ChinaProxy
 DOMAIN-SUFFIX,sinasinasinasina.com,ChinaProxy
 DOMAIN-SUFFIX,sinastorage.com,ChinaProxy
 DOMAIN-SUFFIX,sinauda.com,ChinaProxy
+DOMAIN-SUFFIX,sinawap.com,ChinaProxy
 DOMAIN-SUFFIX,sinayou.com,ChinaProxy
 DOMAIN-SUFFIX,since1989.org,ChinaProxy
 DOMAIN-SUFFIX,sincetimes.com,ChinaProxy
@@ -34355,6 +34382,7 @@ DOMAIN-SUFFIX,stockxp.com,ChinaProxy
 DOMAIN-SUFFIX,stoexpress.us,ChinaProxy
 DOMAIN-SUFFIX,stogd.com,ChinaProxy
 DOMAIN-SUFFIX,stonebuy.com,ChinaProxy
+DOMAIN-SUFFIX,stoneios.com,ChinaProxy
 DOMAIN-SUFFIX,stonepoll.net,ChinaProxy
 DOMAIN-SUFFIX,stoneread.com,ChinaProxy
 DOMAIN-SUFFIX,stonexp.com,ChinaProxy
@@ -35055,6 +35083,7 @@ DOMAIN-SUFFIX,support.com,ChinaProxy
 DOMAIN-SUFFIX,taoyigou.info,ChinaProxy
 DOMAIN-SUFFIX,taoyuantravel.com,ChinaProxy
 DOMAIN-SUFFIX,taozfu198.com,ChinaProxy
+DOMAIN-SUFFIX,taozj.net,ChinaProxy
 DOMAIN-SUFFIX,taozj.org,ChinaProxy
 DOMAIN-SUFFIX,tapas.net,ChinaProxy
 DOMAIN-SUFFIX,taptap.com,ChinaProxy
@@ -36025,6 +36054,7 @@ DOMAIN-SUFFIX,tugouli.com,ChinaProxy
 DOMAIN-SUFFIX,tuhu.com,ChinaProxy
 DOMAIN-SUFFIX,tuhu.org,ChinaProxy
 DOMAIN-SUFFIX,tuhusmart.com,ChinaProxy
+DOMAIN-SUFFIX,8.com,ChinaProxy
 DOMAIN-SUFFIX,tui18.com,ChinaProxy
 DOMAIN-SUFFIX,tui18edu.com,ChinaProxy
 DOMAIN-SUFFIX,tui8.org,ChinaProxy
@@ -36043,6 +36073,7 @@ DOMAIN-SUFFIX,tuirice.com,ChinaProxy
 DOMAIN-SUFFIX,tuishao.net,ChinaProxy
 DOMAIN-SUFFIX,tuishiben.com,ChinaProxy
 DOMAIN-SUFFIX,tuisir.com,ChinaProxy
+DOMAIN-SUFFIX,tuisnake.com,ChinaProxy
 DOMAIN-SUFFIX,tuituifang.com,ChinaProxy
 DOMAIN-SUFFIX,tuixiazai.com,ChinaProxy
 DOMAIN-SUFFIX,tujia.com,ChinaProxy
@@ -36073,6 +36104,7 @@ DOMAIN-SUFFIX,pan.com,ChinaProxy
 DOMAIN-SUFFIX,tuohuangzu.com,ChinaProxy
 DOMAIN-SUFFIX,tuolar.com,ChinaProxy
 DOMAIN-SUFFIX,tuoniao.fm,ChinaProxy
+DOMAIN-SUFFIX,tuopushe.com,ChinaProxy
 DOMAIN-SUFFIX,tuoyi.win,ChinaProxy
 DOMAIN-SUFFIX,tuozhe8.com,ChinaProxy
 DOMAIN-SUFFIX,tupai.me,ChinaProxy
@@ -37888,6 +37920,7 @@ DOMAIN-SUFFIX,whib.com,ChinaProxy
 DOMAIN-SUFFIX,whicec.com,ChinaProxy
 DOMAIN-SUFFIX,whichk.com,ChinaProxy
 DOMAIN-SUFFIX,whitecat.com,ChinaProxy
+DOMAIN-SUFFIX,whitegem.net,ChinaProxy
 DOMAIN-SUFFIX,whjbh.com,ChinaProxy
 DOMAIN-SUFFIX,whjcbus.com,ChinaProxy
 DOMAIN-SUFFIX,whjddc.com,ChinaProxy
@@ -38142,6 +38175,7 @@ DOMAIN-SUFFIX,ad.com,ChinaProxy
 DOMAIN-SUFFIX,wmzhe.com,ChinaProxy
 DOMAIN-SUFFIX,wn51.com,ChinaProxy
 DOMAIN-SUFFIX,wn789.com,ChinaProxy
+DOMAIN-SUFFIX,wnbfw.com,ChinaProxy
 DOMAIN-SUFFIX,wndflb.com,ChinaProxy
 DOMAIN-SUFFIX,wngeshi.com,ChinaProxy
 DOMAIN-SUFFIX,wniecm.com,ChinaProxy
@@ -38322,6 +38356,7 @@ DOMAIN-SUFFIX,wplux.com,ChinaProxy
 DOMAIN-SUFFIX,wpmee.com,ChinaProxy
 DOMAIN-SUFFIX,wpsep.com,ChinaProxy
 DOMAIN-SUFFIX,wpsmail.net,ChinaProxy
+DOMAIN-SUFFIX,wpweixin.com,ChinaProxy
 DOMAIN-SUFFIX,wpxap.com,ChinaProxy
 DOMAIN-SUFFIX,wpxap.mobi,ChinaProxy
 DOMAIN-SUFFIX,wpyou.com,ChinaProxy
@@ -39897,6 +39932,7 @@ DOMAIN-SUFFIX,xycq.net,ChinaProxy
 DOMAIN-SUFFIX,xydfn.com,ChinaProxy
 DOMAIN-SUFFIX,xydhl.com,ChinaProxy
 DOMAIN-SUFFIX,xydjp.com,ChinaProxy
+DOMAIN-SUFFIX,xydxcs.com,ChinaProxy
 DOMAIN-SUFFIX,xydyrc.com,ChinaProxy
 DOMAIN-SUFFIX,xydzb.com,ChinaProxy
 DOMAIN-SUFFIX,xyfc.com,ChinaProxy
@@ -41363,6 +41399,7 @@ DOMAIN-SUFFIX,yuyanpingce.com,ChinaProxy
 DOMAIN-SUFFIX,school.com,ChinaProxy
 DOMAIN-SUFFIX,yuyin.fm,ChinaProxy
 DOMAIN-SUFFIX,yuyin.tv,ChinaProxy
+DOMAIN-SUFFIX,yuyiya.com,ChinaProxy
 DOMAIN-SUFFIX,yuyouge.com,ChinaProxy
 DOMAIN-SUFFIX,yuyoutuan.com,ChinaProxy
 DOMAIN-SUFFIX,yuyu.com,ChinaProxy
@@ -41652,6 +41689,7 @@ DOMAIN-SUFFIX,zc600.com,ChinaProxy
 DOMAIN-SUFFIX,zcccc.com,ChinaProxy
 DOMAIN-SUFFIX,zccrs.com,ChinaProxy
 DOMAIN-SUFFIX,zcdog.com,ChinaProxy
+DOMAIN-SUFFIX,zcdsp.com,ChinaProxy
 DOMAIN-SUFFIX,zcgfgh.com,ChinaProxy
 DOMAIN-SUFFIX,zcifc.com,ChinaProxy
 DOMAIN-SUFFIX,zciphone.com,ChinaProxy
@@ -41984,6 +42022,7 @@ DOMAIN-SUFFIX,zhelun.com,ChinaProxy
 DOMAIN-SUFFIX,zhen.com,ChinaProxy
 DOMAIN-SUFFIX,zhenai.com,ChinaProxy
 DOMAIN-SUFFIX,zhenbi.com,ChinaProxy
+DOMAIN-SUFFIX,zhenbo.org,ChinaProxy
 DOMAIN-SUFFIX,chicken.com,ChinaProxy
 DOMAIN-SUFFIX,zhenfund.com,ChinaProxy
 DOMAIN-SUFFIX,ji.info,ChinaProxy
@@ -42447,6 +42486,7 @@ DOMAIN-SUFFIX,zishuo.com,ChinaProxy
 DOMAIN-SUFFIX,zitanshan.com,ChinaProxy
 DOMAIN-SUFFIX,zitichina.com,ChinaProxy
 DOMAIN-SUFFIX,zitizhuanhuan.com,ChinaProxy
+DOMAIN-SUFFIX,zius.asia,ChinaProxy
 DOMAIN-SUFFIX,zivoo.com,ChinaProxy
 DOMAIN-SUFFIX,ziweishuwu.com,ChinaProxy
 DOMAIN-SUFFIX,ziwork.com,ChinaProxy
