--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -38,7 +38,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-12-08 01:22:07
+// updated on 2017-12-17 18:50:13
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -1599,7 +1599,6 @@ DOMAIN-SUFFIX,anquan.org,REJECT
 DOMAIN-SUFFIX,anreson.net,REJECT
 DOMAIN-SUFFIX,anysdk.com,REJECT
 DOMAIN-SUFFIX,aoodoo.weiphone.com,REJECT
-DOMAIN-SUFFIX,api.branch.io,REJECT
 DOMAIN-SUFFIX,api.mobula.sdk.duapps.com,REJECT
 DOMAIN-SUFFIX,api.similarweb.com,REJECT
 DOMAIN-SUFFIX,api.talkingdata.com,REJECT
@@ -1612,7 +1611,6 @@ DOMAIN-SUFFIX,apple.www.letv.com,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
 DOMAIN-SUFFIX,app-measurement.com,REJECT
 DOMAIN-SUFFIX,appservices.comcsoft.com,REJECT
-DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-SUFFIX,aqgyju.cn,REJECT
 DOMAIN-SUFFIX,aralego.com,REJECT
 DOMAIN-SUFFIX,ard.ihookup.com,REJECT
@@ -2273,6 +2271,7 @@ DOMAIN-SUFFIX,ggcode.2345.com,REJECT
 DOMAIN-SUFFIX,ggdoubi.com,REJECT
 DOMAIN-SUFFIX,ggg.zj.com,REJECT
 DOMAIN-SUFFIX,ggmm777.com,REJECT
+DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
 DOMAIN-SUFFIX,ggw.gusuwang.com,REJECT
 DOMAIN-SUFFIX,ggw.watertu.com,REJECT
 DOMAIN-SUFFIX,ggxt.net,REJECT
@@ -3722,7 +3721,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-12-08 01:22:07
+// updated on 2017-12-17 18:50:12
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -4334,6 +4333,7 @@ DOMAIN-SUFFIX,webrtc.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whatbrowser.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,widevine.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,withgoogle.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,withyoutube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,x.company,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xn--ngstr-lra8j.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,Proxy,force-remote-dns
@@ -4365,7 +4365,9 @@ DOMAIN-SUFFIX,telegramdownload.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,periscope.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pscp.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,t.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tweetdeck.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twimg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twitpic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitter.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vine.co,Proxy,force-remote-dns
@@ -8176,7 +8178,6 @@ DOMAIN-SUFFIX,tweetbackup.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetboard.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetboner.biz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetcs.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,tweetdeck.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deck.ly,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mtw.tl,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetedtimes.com,Proxy,force-remote-dns
@@ -8222,7 +8223,6 @@ DOMAIN-SUFFIX,tl.gd,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitmania.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitoaster.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitonmsn.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,twitpic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twit2d.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twitstat.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,firstfivefollowers.com,Proxy,force-remote-dns
@@ -8579,6 +8579,7 @@ DOMAIN-SUFFIX,vegas.williamhill.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,willw.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,windowsphoneme.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,windscribe.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,community.windy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wingy.site,Proxy,force-remote-dns
 DOMAIN-SUFFIX,winning11.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,winwhispers.info,Proxy,force-remote-dns
