--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -29,7 +29,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-12-08 01:22:07
+// updated on 2017-12-17 18:50:13
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -1590,7 +1590,6 @@ DOMAIN-SUFFIX,anquan.org,REJECT
 DOMAIN-SUFFIX,anreson.net,REJECT
 DOMAIN-SUFFIX,anysdk.com,REJECT
 DOMAIN-SUFFIX,aoodoo.weiphone.com,REJECT
-DOMAIN-SUFFIX,api.branch.io,REJECT
 DOMAIN-SUFFIX,api.mobula.sdk.duapps.com,REJECT
 DOMAIN-SUFFIX,api.similarweb.com,REJECT
 DOMAIN-SUFFIX,api.talkingdata.com,REJECT
@@ -1603,7 +1602,6 @@ DOMAIN-SUFFIX,apple.www.letv.com,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
 DOMAIN-SUFFIX,app-measurement.com,REJECT
 DOMAIN-SUFFIX,appservices.comcsoft.com,REJECT
-DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-SUFFIX,aqgyju.cn,REJECT
 DOMAIN-SUFFIX,aralego.com,REJECT
 DOMAIN-SUFFIX,ard.ihookup.com,REJECT
@@ -2264,6 +2262,7 @@ DOMAIN-SUFFIX,ggcode.2345.com,REJECT
 DOMAIN-SUFFIX,ggdoubi.com,REJECT
 DOMAIN-SUFFIX,ggg.zj.com,REJECT
 DOMAIN-SUFFIX,ggmm777.com,REJECT
+DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
 DOMAIN-SUFFIX,ggw.gusuwang.com,REJECT
 DOMAIN-SUFFIX,ggw.watertu.com,REJECT
 DOMAIN-SUFFIX,ggxt.net,REJECT
@@ -3714,7 +3713,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-12-08 01:22:12
+// updated on 2017-12-17 18:50:32
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -6959,6 +6958,7 @@ DOMAIN-SUFFIX,51jam.com,ChinaProxy
 DOMAIN-SUFFIX,51jetso.com,ChinaProxy
 DOMAIN-SUFFIX,51jiabo.com,ChinaProxy
 DOMAIN-SUFFIX,51jiameng.com,ChinaProxy
+DOMAIN-SUFFIX,51jianli.com,ChinaProxy
 DOMAIN-SUFFIX,51jiarenla.com,ChinaProxy
 DOMAIN-SUFFIX,51jiaxiao.com,ChinaProxy
 DOMAIN-SUFFIX,51jiecai.com,ChinaProxy
@@ -8801,6 +8801,7 @@ DOMAIN-SUFFIX,88520.cc,ChinaProxy
 DOMAIN-SUFFIX,8855.org,ChinaProxy
 DOMAIN-SUFFIX,8860.net,ChinaProxy
 DOMAIN-SUFFIX,88614.com,ChinaProxy
+DOMAIN-SUFFIX,8864.org,ChinaProxy
 DOMAIN-SUFFIX,886404.org,ChinaProxy
 DOMAIN-SUFFIX,886520.cc,ChinaProxy
 DOMAIN-SUFFIX,8866.org,ChinaProxy
@@ -9518,6 +9519,7 @@ DOMAIN-SUFFIX,9jy.net,ChinaProxy
 DOMAIN-SUFFIX,9k51.com,ChinaProxy
 DOMAIN-SUFFIX,9k9by.com,ChinaProxy
 DOMAIN-SUFFIX,9k9k.com,ChinaProxy
+DOMAIN-SUFFIX,9kjt.com,ChinaProxy
 DOMAIN-SUFFIX,9kld.com,ChinaProxy
 DOMAIN-SUFFIX,9koudai.net,ChinaProxy
 DOMAIN-SUFFIX,9ku.com,ChinaProxy
@@ -14550,6 +14552,7 @@ DOMAIN-SUFFIX,cmaif.com,ChinaProxy
 DOMAIN-SUFFIX,leasing.com,ChinaProxy
 DOMAIN-SUFFIX,cmbchina.com,ChinaProxy
 DOMAIN-SUFFIX,cmbchinaucs.com,ChinaProxy
+DOMAIN-SUFFIX,cmbimg.com,ChinaProxy
 DOMAIN-SUFFIX,cmboy.com,ChinaProxy
 DOMAIN-SUFFIX,cmbuy10086.com,ChinaProxy
 DOMAIN-SUFFIX,conf.org,ChinaProxy
@@ -16204,6 +16207,7 @@ DOMAIN-SUFFIX,db600.com,ChinaProxy
 DOMAIN-SUFFIX,db9db.com,ChinaProxy
 DOMAIN-SUFFIX,dbacg.com,ChinaProxy
 DOMAIN-SUFFIX,dbank.com,ChinaProxy
+DOMAIN-SUFFIX,dbankcdn.com,ChinaProxy
 DOMAIN-SUFFIX,dbankcloud.com,ChinaProxy
 DOMAIN-SUFFIX,dbanotes.net,ChinaProxy
 DOMAIN-SUFFIX,dbc2000.org,ChinaProxy
@@ -17590,6 +17594,7 @@ DOMAIN-SUFFIX,job580.com,ChinaProxy
 DOMAIN-SUFFIX,lifemall.com,ChinaProxy
 DOMAIN-SUFFIX,lining.com,ChinaProxy
 DOMAIN-SUFFIX,lvyou.com,ChinaProxy
+DOMAIN-SUFFIX,mallchina.com,ChinaProxy
 DOMAIN-SUFFIX,nci.com,ChinaProxy
 DOMAIN-SUFFIX,picclife.com,ChinaProxy
 DOMAIN-SUFFIX,sleb.com,ChinaProxy
@@ -18714,6 +18719,7 @@ DOMAIN-SUFFIX,feilu.cc,ChinaProxy
 DOMAIN-SUFFIX,feilvway.com,ChinaProxy
 DOMAIN-SUFFIX,feimalv.com,ChinaProxy
 DOMAIN-SUFFIX,feimao88.com,ChinaProxy
+DOMAIN-SUFFIX,feimaojiasu.com,ChinaProxy
 DOMAIN-SUFFIX,feimosheji.com,ChinaProxy
 DOMAIN-SUFFIX,feiniu.com,ChinaProxy
 DOMAIN-SUFFIX,feipin.com,ChinaProxy
@@ -26699,6 +26705,7 @@ DOMAIN-SUFFIX,lhzy.net,ChinaProxy
 DOMAIN-SUFFIX,ning.com,ChinaProxy
 DOMAIN-SUFFIX,li63.com,ChinaProxy
 DOMAIN-SUFFIX,liageren.com,ChinaProxy
+DOMAIN-SUFFIX,lialiu.com,ChinaProxy
 DOMAIN-SUFFIX,lianaibashi.com,ChinaProxy
 DOMAIN-SUFFIX,lianaibiji.com,ChinaProxy
 DOMAIN-SUFFIX,lianbijr.com,ChinaProxy
@@ -28379,6 +28386,7 @@ DOMAIN-SUFFIX,mico.io,ChinaProxy
 DOMAIN-SUFFIX,notes.com,ChinaProxy
 DOMAIN-SUFFIX,cn.com,ChinaProxy
 DOMAIN-SUFFIX,microbell.com,ChinaProxy
+DOMAIN-SUFFIX,microcai.org,ChinaProxy
 DOMAIN-SUFFIX,microfotos.com,ChinaProxy
 DOMAIN-SUFFIX,microidc.com,ChinaProxy
 DOMAIN-SUFFIX,microlensyh.com,ChinaProxy
@@ -28417,6 +28425,7 @@ DOMAIN-SUFFIX,miidi.net,ChinaProxy
 DOMAIN-SUFFIX,miidol.com,ChinaProxy
 DOMAIN-SUFFIX,miiee.com,ChinaProxy
 DOMAIN-SUFFIX,miit.cc,ChinaProxy
+DOMAIN-SUFFIX,mijiayoupin.com,ChinaProxy
 DOMAIN-SUFFIX,mijishe.com,ChinaProxy
 DOMAIN-SUFFIX,mika123.com,ChinaProxy
 DOMAIN-SUFFIX,mika18.com,ChinaProxy
@@ -31193,6 +31202,7 @@ DOMAIN-SUFFIX,q3060.com,ChinaProxy
 DOMAIN-SUFFIX,q366.com,ChinaProxy
 DOMAIN-SUFFIX,q5.com,ChinaProxy
 DOMAIN-SUFFIX,q68.com,ChinaProxy
+DOMAIN-SUFFIX,q6haqi.com,ChinaProxy
 DOMAIN-SUFFIX,q869.com,ChinaProxy
 DOMAIN-SUFFIX,qalex.com,ChinaProxy
 DOMAIN-SUFFIX,qb5200.com,ChinaProxy
@@ -35871,6 +35881,7 @@ DOMAIN-SUFFIX,toursforfun.com,ChinaProxy
 DOMAIN-SUFFIX,toushibao.com,ChinaProxy
 DOMAIN-SUFFIX,toutiao.com,ChinaProxy
 DOMAIN-SUFFIX,toutiao.io,ChinaProxy
+DOMAIN-SUFFIX,toutiao11.com,ChinaProxy
 DOMAIN-SUFFIX,toutiao9.com,ChinaProxy
 DOMAIN-SUFFIX,toutiaocdn.com,ChinaProxy
 DOMAIN-SUFFIX,toutiaocdn.net,ChinaProxy
@@ -36808,6 +36819,7 @@ DOMAIN-SUFFIX,uz73.com,ChinaProxy
 DOMAIN-SUFFIX,uz73.net,ChinaProxy
 DOMAIN-SUFFIX,uzai.com,ChinaProxy
 DOMAIN-SUFFIX,uzaicdn.com,ChinaProxy
+DOMAIN-SUFFIX,uzer.me,ChinaProxy
 DOMAIN-SUFFIX,uzham.com,ChinaProxy
 DOMAIN-SUFFIX,uzhongtou.com,ChinaProxy
 DOMAIN-SUFFIX,uzicai.com,ChinaProxy
@@ -40504,6 +40516,7 @@ DOMAIN-SUFFIX,yijia.com,ChinaProxy
 DOMAIN-SUFFIX,yijian119.com,ChinaProxy
 DOMAIN-SUFFIX,yijiangshan.net,ChinaProxy
 DOMAIN-SUFFIX,yijianjiaoyu.com,ChinaProxy
+DOMAIN-SUFFIX,yijiaomao.com,ChinaProxy
 DOMAIN-SUFFIX,yijie.com,ChinaProxy
 DOMAIN-SUFFIX,yijiebuyi.com,ChinaProxy
 DOMAIN-SUFFIX,yijied.com,ChinaProxy
@@ -41047,6 +41060,7 @@ DOMAIN-SUFFIX,youxichou.com,ChinaProxy
 DOMAIN-SUFFIX,youxicity.com,ChinaProxy
 DOMAIN-SUFFIX,youxicool.net,ChinaProxy
 DOMAIN-SUFFIX,youxidaxue.com,ChinaProxy
+DOMAIN-SUFFIX,youxidongli.com,ChinaProxy
 DOMAIN-SUFFIX,youxidudu.com,ChinaProxy
 DOMAIN-SUFFIX,youxiduo.com,ChinaProxy
 DOMAIN-SUFFIX,youxigod.com,ChinaProxy
