add list file for surge3

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ script:
   - python ssconf.py
 after_success:
   - cp configFileHere/* gh-pages/
+  - cp list/adlist.txt gh-pages/adlist.list
+  - cp list/gfwlist.txt gh-pages/gfwlist.list
+  - cp list/whitelist.txt gh-pages/whitelist.list
 
 deploy:
   provider: pages
